# panella

./: .dockerignore  .gitignore  .trivyignore.yaml  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  SECURITY.md  TEST-INVENTORY.md  docker-compose.yml  docker-entrypoint.sh  glama.json  llms-install.md  llms.txt  pyproject.toml  server.json
config/: governance.example.yaml  governance.local.example.yaml  governance.yaml
docs/: COMPARISON.md  CONSOLE.md  GOVERNANCE.md  QUICKSTART.md  RELEASE.md  SELF_HOST.md  TENANCY.md  UPGRADE.md
eval/: README.md  REPORT.template.md  __init__.py  _paths.py  compose.eval.yml  public_scan.py  render_report.py  smoke.py
panella/: __init__.py  _default_adapter.py  approval_audit.py  approval_finalizer.py  approval_service.py  approval_transport.py  audit.py  break_glass.py  bridge_health.py  cli.py  client.py  client_raw.py  config_render.py  counters.py  governance.py  http_client.py  mcp_tools.py  memory_history.py  memory_outbox_schema.sql  model_router.py  panella_adapter.py  preference_decide.py  preference_extraction.py  principal.py  profile.py  quarantine.py  reader.py  reconcile.py  sanitize.py  store_probe.py  tag_lock.py  wing_boost.py  write_hygiene.py
panella_selfhost/: __init__.py  render.py  serve.py
tests/: test_approval_mcp_loop.py  test_approvals_http_api.py  test_audit_hash_chain.py  test_audit_invariant.py  test_boot_fail_loud.py  test_break_glass.py  test_cli_connect.py  test_cli_init.py  test_cli_lifecycle.py  test_cli_operator.py  test_cli_tokens.py  test_cli_tokens_revoke.py  test_cli_up.py  test_console.py  test_governance_config_render.py  test_import_surface.py  test_memtype_coercion_contract.py  (+9 more)
(+134 files in other folders)
